made changes for Edit passwords

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.dheeraj.passwordmanager" >
+    package="com.dheeraj.passwordmanager">
 
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -12,14 +12,17 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PasswordManager"
-        android:requestLegacyExternalStorage="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".PasswordEditActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,8 +31,7 @@
         </activity>
         <activity
             android:name=".AddPasswordDetails"
-            android:label="@string/app_name">
-            </activity>
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
